--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,5 +1,5 @@
 .blog {
-  padding: 26px 137px;
+  padding: 26px 137px 0;
   display: grid;
   grid-template-columns: 3fr 1fr;
   grid-template-rows: 1fr, auto;
