add styles for burger menu (desktop)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
 @import url("pagination.css");
 @import url("form.css");
 @import url("footer.css");
+@import url("burger.css");
 
 :root {
   --color-primary: #3d8b74;
