--- a/styles/header.css
+++ b/styles/header.css
@@ -1,10 +1,6 @@
-.page__header {
-  /* height: 77px; */
+.header {
   display: flex;
   padding: 0 138px;
-}
-
-.header {
   background-color: #fff;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.05);
 }
@@ -26,6 +22,7 @@
 
 .nav {
   flex-basis: 38%;
+  position: relative;
 }
 
 .nav__menu {
