--- a/styles/blog.css
+++ b/styles/blog.css
@@ -11,3 +11,38 @@
   grid-column-start: 1;
   grid-column-end: 3;
 }
+
+@media screen and (max-width: 1200px) {
+  .blog {
+    padding-right: 48px;
+		padding-left: 48px;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 1050px) {
+  .blog {
+    display: flex;
+		flex-direction: column;
+		grid-row-gap: 30px;
+  }
+
+	.posts {
+		order: 1;
+	}
+
+	.pagination {
+		order: 2;
+	}
+
+	.aside {
+		order: 3;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.blog {
+    padding-right: 28px;
+		padding-left: 28px;
+	}
+}
