--- a/styles/form.css
+++ b/styles/form.css
@@ -40,3 +40,31 @@
 	padding-left: 42px;
 	padding-right: 42px;
 }
+
+@media screen and (max-width: 1050px) {
+	.form__inputs {
+		width: 60%;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.form__input {
+		margin-bottom: 20px;
+		max-width: 100%;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.form {
+		padding-right: 25px;
+		padding-left: 25px;
+	}
+
+	.form__inputs {
+		width: 75%;
+		margin: 0 auto;
+		display: flex;
+		flex-direction: column;
+	}
+}
