--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,6 @@
   --color-primary-hovered: #40a385;
   --color-font-default: #232323;
   --color-font-secondary: #818181;
-  --main-bg-color: #f5f5f5;
   --form-bg-color: #e2eeea;
   --light-bg-color: #ffffff;
   --transparent-bg-color: rgba(255, 255, 255, 0.65);
@@ -27,6 +26,10 @@
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 ul,
@@ -45,7 +48,7 @@ button {
 }
 
 .page {
-  background-color: var(--main-bg-color);
+  background-color: var(--light-bg-color);
   font-family: "Mulish", sans-serif;
   font-size: 16px;
   color: var(--color-font-default);
